--- a/src/style/style.css
+++ b/src/style/style.css
@@ -6,6 +6,12 @@
   box-sizing: border-box;
 }
 
+*,
+*::before,
+*::after {
+  -webkit-tap-highlight-color: transparent;
+}
+
 /*
   2. Remove default margin
 */
